--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .background2 {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/assets/img/bg2.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/assets/img/bg2.jpeg');
   box-sizing: border-box;
   background-size: cover;
 }
